# graph_rag

./: .env  Dockerfile  README.md  pyproject.toml  settings.yaml  start.sh
app/: .env  config.py  main.py
app/controller/: health.py  ollama_chat.py  router.py
app/schemas/: ollama_chat.py  response.py
app/service/: neo4j_service.py
app/static/redoc/bundles/: redoc.standalone.js
docs/input/: zzq_beiying.txt
input/: beiying.txt
output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
output/lancedb/default-community-full_content.lance/_transactions/: 0-d5e13f0f-275d-411f-b88e-2c4b55a72f92.txn  1-13f0ece9-66fb-4366-9be0-a4b5d662f00c.txn
output/lancedb/default-community-full_content.lance/_versions/: 1.manifest  2.manifest
output/lancedb/default-community-full_content.lance/data/: 405a2fd4-2002-469b-94c4-4a6fec36dc59.lance  9c7552b4-8339-424a-8b61-ebecda3ae0a8.lance
output/lancedb/default-entity-description.lance/_transactions/: 0-1963d99c-94a4-4850-8461-cca1035ddec1.txn  1-74755e3e-14d1-42be-a08f-e3856fe778f3.txn
output/lancedb/default-entity-description.lance/_versions/: 1.manifest  2.manifest
output/lancedb/default-text_unit-text.lance/_versions/: 1.manifest  (+1 more)
prompts/: basic_search_system_prompt.txt  community_report_graph.txt  drift_reduce_prompt.txt  drift_search_system_prompt.txt  extract_claims.txt  extract_graph.txt  global_search_map_system_prompt.txt  global_search_reduce_system_prompt.txt  local_search_system_prompt.txt  summarize_descriptions.txt
(+5 files in other folders)
